CHANGES IN FLTK 1.1.0b8

	- Fl_Help_View::resize() didn't resize the horizontal
	  scrollbar.
	- MacOS: list all fonts, fixed clipping and mouse
	  pointer bugs.
	- The Fl_File_Chooser widget now uses hotspot() to
	  position the dialog under the mouse pointer prior to
	  showing it.
	- Added a configure check for *BSD - use -pthread option
	  instead of -lpthread.
	- Fl_Text_Display could get in an infinite loop when
	  redrawing a portion of the screen.  Added a check for
	  the return value from fl_clip_box() so that the
	  correct bounding box is used.
	- Removed the Fl_Mutex and Fl_Signal_Mutex classes from
	  the threads example, since they weren't being used
	  and apparently are not very portable.
	- Fl_Help_View now ignores links when the link callback
	  returns NULL, and displays a sensible error message
	  when an unhandled URI scheme is used (e.g. http:,
	  ftp:)
	- Fl_File_Icon::load_system_icons() no longer complains
	  about missing icon files, just files that exist but
	  can't be loaded.
	- FLUID didn't list the plastic box and frame types.
	- Now hide the tooltip window whenever a window is
	  hidden.  Otherwise a tooltip window could keep an
	  application running.
	- Updated FLUID to only append a trailing semicolon to
	  code lines in a callback (so "#include" and friends
	  will work...)
	- The Fl_Color_Chooser widget now supports keyboard
	  navigation.
	- Fixed button and valuator widgets to call Fl::focus()
	  instead of take_focus().
	- Tweeked the radio button drawing code for better
	  circles with different boxtypes.
	- The Fl_File_Chooser widget did not provide a shown()
	  method, and fl_file_chooser() and fl_dir_chooser() did
	  not wait on shown(); this would cause them to return
	  prematurely if you switched desktops/workspaces.
	- Cosmetic changes to plastic boxtypes.  Now look much
	  better for large areas and the buttons now have a much
	  greater "3D" feeling to them.
	- Added new Fl::draw_box_active() method so that