@@ -100,7 +100,7 @@ boxtype(++), browser(++), button(++), buttons(++), checkers(++),
 clock(++), colbrowser(++), color_chooser(++), cube(++), cursor(++),
 curve(++), demo(++), doublebuffer(++), editor(++), fast_slow(++),
 file_chooser(++), fonts(++), forms(++), fractals(++), fullscreen(++),
-gl_overlay(-), glpuzzle(++), hello(++), help(++), iconize(++), image(+),
+gl_overlay(++), glpuzzle(++), hello(++), help(++), iconize(++), image(+),
 inactive(++), input(++), keyboard(+), label(++), line_style(+),
 mandelbrot(++), menubar(++), message(++), minimum(++), navigation(++),
 output(++), overlay(-), pack(++), pixmap(++), pixmap_browser(++),
